Backup before quality hardening