@@ -1,7 +1,6 @@
 package geiler.addons.client.module;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 public final class ModuleManager {
@@ -11,11 +10,17 @@ public final class ModuleManager {
 	}
 
 	public static void register(Module module) {
+		if (module == null) throw new IllegalArgumentException("module must not be null");
+		for (Module existing : MODULES) {
+			if (existing == module || existing.name().equals(module.name())) {
+				throw new IllegalArgumentException("Module already registered: " + module.name());
+			}
+		}
 		MODULES.add(module);
 	}
 
 	public static List<Module> modules() {
-		return Collections.unmodifiableList(MODULES);
+		return List.copyOf(MODULES);
 	}
 
 	public static List<Module> modules(Category category) {
